--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Automatically start and stop mutagen when starting and stopping a Lando project.",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf ./dist",
     "compile": "tsc",
+    "package": "yarn clean && yarn compile && cp package.json dist && cp yarn.lock dist && cd dist && yarn install --production --immutable --immutable-cache --check-cache",
     "coverage": "nyc report --reporter=text",
     "lint": "eslint --quiet . --ext .ts",
     "test:unit": "nyc --reporter=text mocha --timeout 5000 test/**/*.spec.js",
