--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,7 +43,7 @@ jobs:
     - run: yarn package
     - name: Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.event.ref, 'refs/tags/v')
       with:
         body_path: ${{ github.workspace }}/CHANGELOG.md
         fail_on_unmatched_files: true
