--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,32 +1,13 @@
-name: Actions
+name: Package
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+    - '*'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 12
-      uses: actions/setup-node@v2
-      with:
-        node-version: 12
-        cache: 'yarn'
-    - uses: actions/cache@v2
-      with:
-        path: '**/node_modules'
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-    - run: yarn install
-    - run: yarn compile
-    - run: yarn test
-
   package:
     runs-on: ubuntu-latest
-    needs: test
     steps:
     - uses: actions/checkout@v2
       with:
@@ -45,7 +26,6 @@ jobs:
     - run: zip -r release.zip lando-mutagen
     - name: Release
       uses: softprops/action-gh-release@v1
-      # if: startsWith(github.ref, 'refs/tags/')
       with:
         body_path: ${{ github.workspace }}/CHANGELOG.md
         fail_on_unmatched_files: true
