--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,29 @@
-name: Package
+name: main
 
 on: push
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Use Node.js 12
-  #     uses: actions/setup-node@v2
-  #     with:
-  #       node-version: 12
-  #       cache: 'yarn'
-  #   - uses: actions/cache@v2
-  #     with:
-  #       path: '**/node_modules'
-  #       key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-  #   - run: yarn install
-  #   - run: yarn compile
-  #   - run: yarn test
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 12
+      uses: actions/setup-node@v2
+      with:
+        node-version: 12
+        cache: 'yarn'
+    - uses: actions/cache@v2
+      with:
+        path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+    - run: yarn install
+    - run: yarn compile
+    - run: yarn test
 
   package:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    # needs: test
+    needs: test
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 12
@@ -40,9 +39,7 @@ jobs:
     - run: mv dist lando-mutagen
     - run: zip -r release.zip lando-mutagen
     - name: Release
-      uses: ncipollo/release-action@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
       with:
-        bodyFile: "CHANGELOG.md"
-        artifacts: "release.zip"
-        draft: true
+        body_path: ${{ github.workspace }}/CHANGELOG.md
+        files: release.zip
