--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es2019",
         "jsx": "preserve",
         "strictFunctionTypes": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "dist",
         "typeRoots": [
             "src/types",
