--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -rf ./dist",
     "compile": "tsc",
     "package": "yarn clean && yarn compile && cp CHANGELOG.md dist && cp package.json dist && cp yarn.lock dist && cd dist && yarn install --production --immutable --immutable-cache --check-cache",
+    "install:home": "yarn compile && rm -rf ~/.lando/plugins/lando-mutagen && mkdir -p ~/.lando/plugins && cp -r dist ~/.lando/plugins/lando-mutagen",
     "coverage": "nyc report --reporter=text",
     "lint": "eslint --quiet . --ext .ts",
     "test:unit": "nyc --reporter=text mocha --timeout 5000 test/**/*.spec.js",
