--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "install:home": "yarn compile && rm -rf ~/.lando/plugins/lando-mutagen && mkdir -p ~/.lando/plugins && cp -r dist ~/.lando/plugins/lando-mutagen",
     "coverage": "nyc report --reporter=text",
     "lint": "eslint --quiet . --ext .ts",
-    "test:unit": "nyc --reporter=text mocha --timeout 5000 test/**/*.spec.js",
+    "test:unit": "nyc --reporter=text ts-mocha --timeout 5000 ./**/*.test.ts",
     "test": "yarn lint && yarn test:unit"
   },
   "keywords": [
@@ -26,7 +26,10 @@
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
     "@babel/eslint-parser": "^7.16.0",
+    "@types/chai": "^4.3.0",
+    "@types/expect": "^24.3.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
@@ -36,6 +39,7 @@
     "eslint-config-google": "^0.14.0",
     "mocha": "^9.2.2",
     "nyc": "^15.1.0",
+    "ts-mocha": "^9.0.2",
     "typescript": "^4.6.2"
   }
 }
