--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
+    "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
     "@types/chai": "^4.3.0",
-    "@types/expect": "^24.3.0",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
